<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".information">

    <ImageView
        android:id="@+id/informationBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="596dp"
        android:contentDescription="@string/infromationbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_background" />

    <ImageView
        android:id="@+id/informationFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/informationframe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rechteck_3" />

    <TextView
        android:id="@+id/informationTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/information"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/informationBackground"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/informationBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/informationTitel"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/back_btn" />

    <ImageButton
        android:id="@+id/kontaktFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/kontaktframe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/informationBackground"
        app:layout_constraintVertical_bias="0.242"
        app:srcCompat="@drawable/rechteck_5" />

    <ImageButton
        android:id="@+id/datenschutzFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/datenschutzframe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/informationBackground"
        app:layout_constraintVertical_bias="0.321"
        app:srcCompat="@drawable/rechteck_5" />

    <TextView
        android:id="@+id/kontaktTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kontaktdaten"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/kontaktFrame"
        app:layout_constraintEnd_toEndOf="@+id/kontaktFrame"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/kontaktFrame"
        app:layout_constraintTop_toTopOf="@+id/kontaktFrame"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/datenschutzTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datenschutzbestimmungen"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/datenschutzFrame"
        app:layout_constraintEnd_toEndOf="@+id/datenschutzFrame"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/datenschutzFrame"
        app:layout_constraintTop_toBottomOf="@+id/kontaktFrame"
        app:layout_constraintVertical_bias="0.395" />

</androidx.constraintlayout.widget.ConstraintLayout>